--- a/test.html
+++ b/test.html
@@ -1,10 +1,14 @@
 <html>
   <head>
   </head>
-  <body>
-    <!--Load the AJAX API-->
+  <body>    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.0/react.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.0/react-dom.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.0/react-dom-server.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.6.16/browser.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="test.js"></script>
-
     <div id="foo">
     <h1> "testing" </h1>  
     </div>
@@ -12,6 +16,21 @@
 
     <div id='addJquery'>
     </div>
+  
+  <select id = "selColor">
+   <option value = "#FFFFFF">White</option>
+   <option value = "#FF0000">Red</option>
+   <option value = "#FFCC00">Orange</option>
+   <option value = "#FFFF00">Yellow</option>
+   <option value = "#00FF00">Green</option>
+   <option value = "#0000FF">Blue</option>
+   <option value = "#663366">Indigo</option>
+   <option value = "#FF00FF">Violet</option>
+  </select>
+  <input type = "button"
+    value = "change color"
+    onclick = "changeColor()" />
+  
   
   </body>
 
