--- a/test.html
+++ b/test.html
@@ -9,10 +9,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.6.16/browser.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open Sans|Roboto|Slabo 27px|Lato|Oswald|Roboto Condensed|Source Sans Pro|Montserrat|Raleway|PT Sans|Lora|Roboto Slab|Open Sans Condensed|Droid Sans|Ubuntu|Droid Serif|Merriweather|Arimo|PT Sans Narrow|Noto Sans|Titillium Web|Playfair Display|PT Serif|Fjalla One|Indie Flower|Oxygen|Muli|Dosis|Inconsolata|Bitter|Cabin|Hind|Lobster|Arvo|Yanone Kaffeesatz|Noto Serif|Poiret One|Passion One|Nunito|Poppins|Alegreya Sans|Merriweather Sans|Bree Serif|Abel|Anton|Josefin Sans|Exo 2|Libre Baskerville|Ubuntu Condensed|Asap|Crimson Text|Pacifico|Catamaran|Candal|Varela Round|Maven Pro|Signika|Francois One|Archivo Narrow|Quicksand|Shadows Into Light|Questrial|Exo|Cuprum|Vollkorn|Karla|PT Sans Caption|Play|Orbitron|Alegreya|Pathway Gothic One|Dancing Script|Rubik|Fira Sans|Rokkitt|Abril Fatface|Yellowtail|Hammersmith One|Patua One|Roboto Mono|Crete Round|Amatic SC|Righteous|Architects Daughter|Monda|Noticia Text|Lobster Two|EB Garamond|Kaushan Script|News Cycle|Comfortaa|Chewy|Ropa Sans|Josefin Slab|Cinzel|Gloria Hallelujah|Russo One|Sanchez|Acme|Quattrocento Sans|Pontano Sans|Domine|Source Code Pro|Gudea|ABeeZee|Istok Web|Cabin Condensed|Cantarell|Bangers|Alfa Slab One|Ruda|Work Sans|Permanent Marker|Archivo Black|Satisfy|Old Standard TT|Courgette|Sigmar One|Coming Soon|Armata|Kreon|Quattrocento|BenchNine|Covered By Your Grace|Tinos|Economica|Vidaloka|Fredoka One|Oleo Script|Droid Sans Mono|Source Serif Pro|Audiowide|Antic|Playfair Display SC|Handlee|Luckiest Guy|Varela|Didact Gothic|Cardo|Shadows Into Light Two|Glegoo|Playball|Sintony|Philosopher|Antic Slab|Bevan|Khula|Great Vibes|Cookie|Volkhov|Boogaloo|Squada One|Actor|Rock Salt|Tangerine|Arapey|Ek Mukta|Days One|Changa One|Bad Script|Gentium Book Basic|Nobile|Amiri|Sorts Mill Goudy|Special Elite|Paytone One|Kanit|Rambla|Patrick Hand|Montez|Signika Negative|Damion|Neuton|Molengo|Rajdhani|">
     <script src="test.js"></script>
     <div id="testing">
-    <h1> "testing" </h1>  
+    <h1> "testing" </h1>
+    <p> "new test" </p> 
     </div>
     
 
